--- a/index.html
+++ b/index.html
@@ -426,9 +426,9 @@
     <!-- Footer -->
     <div class="footer">
       <p>Void Protocol • <span class="void">Light in the Darkness.</span><br>
-      <a href="https://github.com/librevoid/ecosystem" target="_blank">Ecosystem</a> • 
-      <a href="https://github.com/librevoid/whitepaper" target="_blank">Whitepaper</a> • 
-      <a href="https://github.com/librevoid/presale" target="_blank">Presale</a> • 
+      <a href="https://librevoid.github.io/ecosystem/" target="_blank">Ecosystem</a> • 
+      <a href="https://https://librevoid.github.io/Whitepaper/" target="_blank">Whitepaper</a> • 
+      <a href="https://librevoid.github.io/presale/" target="_blank">Presale</a> • 
       <a href="https://x.com/librevoid" target="_blank">@librevoid</a></p>
       <p style="margin-top:1rem; font-size:.85rem;">Official site & app launching soon. 100% funds → LibreVoid build.</p>
     </div>
